# Process this file with automake to produce Makefile.in
# Copyright (c) 2004 The University of Cincinnati.  
 # All rights reserved.
 # 
 # UC MAKES NO REPRESENTATIONS OR WARRANTIES ABOUT THE SUITABILITY OF THE
 # SOFTWARE, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
 # IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE,
 # OR NON-INFRINGEMENT.  UC SHALL NOT BE LIABLE FOR ANY DAMAGES SUFFERED BY
 # LICENSEE AS A RESULT OF USING, RESULT OF USING, MODIFYING OR
 # DISTRIBUTING THIS SOFTWARE OR ITS DERIVATIVES.
 # 
 # By using or copying this Software, Licensee agrees to abide by the
 # intellectual property laws, and all other applicable laws of the U.S.,
 # and the terms of this license.
 # 
 # You may modify, distribute, and use the software contained in this
 # package under the terms of the "GNU LIBRARY GENERAL PUBLIC LICENSE"
 # version 2, June 1991. A copy of this license agreement can be found in
 # the file "LGPL", distributed with this archive.
 # 
 # --------------------------------------------------------------------------

lib_LTLIBRARIES = libxmlplugin.la

libxmlplugin_la_LD_FLAGS= \
	-module \
	-avoid-version \
	-no-undefined

libxmlplugin_la_LIBADD = \
	-laire \
	-lsavantutils \
	-lclutils \
	-lltdl 

libxmlplugin_la_SOURCES = \
	XmlFile.hh \
	XmlFile.cc \
	XML.hh \
	XML.cc \
	XMLAbsoluteOperator.hh \
	XMLAbsoluteOperator.cc \
	XMLAccessSubtypeDefinition.hh \
	XMLAccessSubtypeDefinition.cc \
	XMLAccessTypeDefinition.hh \
	XMLAccessTypeDefinition.cc \
	XMLAcrossAttribute.hh \
	XMLAcrossAttribute.cc \
	XMLActiveAttribute.hh \
	XMLActiveAttribute.cc \
	XMLAdditionOperator.hh \
	XMLAdditionOperator.cc \
	XMLAggregate.hh \
	XMLAggregate.cc \
	XMLAliasDeclaration.hh \
	XMLAliasDeclaration.cc \
	XMLAllocator.hh \
	XMLAllocator.cc \
	XMLAndOperator.hh \
	XMLAndOperator.cc \
	XMLArchitectureDeclaration.hh \
	XMLArchitectureDeclaration.cc \
	XMLArchitectureStatement.hh \
	XMLArchitectureStatement.cc \
	XMLArchitectureStatementList.hh \
	XMLArchitectureStatementList.cc \
	XMLElsif.hh \
	XMLElsif.cc \
	XMLArrayNatureDefinition.hh \
	XMLArrayNatureDefinition.cc \
	XMLArraySubnatureDefinition.hh \
	XMLArraySubnatureDefinition.cc \
	XMLArraySubtypeDefinition.hh \
	XMLArraySubtypeDefinition.cc \
	XMLArrayTypeDefinition.hh \
	XMLArrayTypeDefinition.cc \
	XMLAscendingAttribute.hh \
	XMLAscendingAttribute.cc \
	XMLAssertionStatement.hh \
	XMLAssertionStatement.cc \
	XMLBreakElement.hh \
	XMLBreakElement.cc \
	XMLAssociationElement.hh \
	XMLAssociationElement.cc \
	XMLAssociationElementByExpression.hh \
	XMLAssociationElementByExpression.cc \
	XMLAssociationElementOpen.hh \
	XMLAssociationElementOpen.cc \
	XMLAssociationList.hh \
	XMLAssociationList.cc \
	XMLBreakList.hh \
	XMLBreakList.cc \
	XMLAttribute.hh \
	XMLAttribute.cc \
	XMLAttributeDeclaration.hh \
	XMLAttributeDeclaration.cc \
	XMLAttributeSpecification.hh \
	XMLAttributeSpecification.cc \
	XMLAttributeSpecificationList.hh \
	XMLAttributeSpecificationList.cc \
	XMLBaseAttribute.hh \
	XMLBaseAttribute.cc \
	XMLBitStringLiteral.hh \
	XMLBitStringLiteral.cc \
	XMLBlockConfiguration.hh \
	XMLBlockConfiguration.cc \
	XMLBlockStatement.hh \
	XMLBlockStatement.cc \
	XMLBranchQuantityDeclaration.hh \
	XMLBranchQuantityDeclaration.cc \
	XMLUserAttribute.hh \
	XMLUserAttribute.cc \
	XMLBreakStatement.hh \
	XMLBreakStatement.cc \
	XMLOperator.hh \
	XMLOperator.cc \
	XMLCaseStatement.hh \
	XMLCaseStatement.cc \
	XMLCaseStatementAlternative.hh \
	XMLCaseStatementAlternative.cc \
	XMLCaseStatementAlternativeByChoices.hh \
	XMLCaseStatementAlternativeByChoices.cc \
	XMLCaseStatementAlternativeByExpression.hh \
	XMLCaseStatementAlternativeByExpression.cc \
	XMLCaseStatementAlternativeByOthers.hh \
	XMLCaseStatementAlternativeByOthers.cc \
	XMLCaseStatementAlternativeList.hh \
	XMLCaseStatementAlternativeList.cc \
	XMLCharacterLiteral.hh \
	XMLCharacterLiteral.cc \
	XMLChoice.hh \
	XMLChoice.cc \
	XMLChoiceList.hh \
	XMLChoiceList.cc \
	XMLComment.hh \
	XMLComment.cc \
	XMLCommentList.hh \
	XMLCommentList.cc \
	XMLComponentConfiguration.hh \
	XMLComponentConfiguration.cc \
	XMLComponentDeclaration.hh \
	XMLComponentDeclaration.cc \
	XMLComponentInstantiationStatement.hh \
	XMLComponentInstantiationStatement.cc \
	XMLConcatenationOperator.hh \
	XMLConcatenationOperator.cc \
	XMLConcurrentAssertionStatement.hh \
	XMLConcurrentAssertionStatement.cc \
	XMLConcurrentBreakStatement.hh \
	XMLConcurrentBreakStatement.cc \
	XMLConcurrentConditionalSignalAssignment.hh \
	XMLConcurrentConditionalSignalAssignment.cc \
	XMLConcurrentGenerateForStatement.hh \
	XMLConcurrentGenerateForStatement.cc \
	XMLConcurrentGenerateIfStatement.hh \
	XMLConcurrentGenerateIfStatement.cc \
	XMLConcurrentStatement.hh \
	XMLConcurrentProcedureCallStatement.hh \
	XMLConcurrentProcedureCallStatement.cc \
	XMLConcurrentSelectedSignalAssignment.hh \
	XMLConcurrentSelectedSignalAssignment.cc \
	XMLConcurrentStatement.cc \
	XMLConditionalWaveform.hh \
	XMLConditionalWaveform.cc \
	XMLConditionalWaveformList.hh \
	XMLConditionalWaveformList.cc \
	XMLConfigurationDeclaration.hh \
	XMLConfigurationDeclaration.cc \
	XMLAboveAttribute.hh \
	XMLAboveAttribute.cc \
	XMLConfigurationItem.hh \
	XMLConfigurationItem.cc \
	XMLConfigurationItemList.hh \
	XMLConfigurationItemList.cc \
	XMLConfigurationSpecification.hh \
	XMLConfigurationSpecification.cc \
	XMLConstantDeclaration.hh \
	XMLConstantDeclaration.cc \
	XMLConstantInterfaceDeclaration.hh \
	XMLConstantInterfaceDeclaration.cc \
	XMLContributionAttribute.hh \
	XMLContributionAttribute.cc \
	XMLDeclaration.hh \
	XMLDeclaration.cc \
	XMLDeclarationList.hh \
	XMLDeclarationList.cc \
	XMLDelayedAttribute.hh \
	XMLDelayedAttribute.cc \
	XMLDesignFile.hh \
	XMLDesignFile.cc \
	XMLDesignFileList.hh \
	XMLDesignFileList.cc \
	XMLStatement.hh \
	XMLStatement.cc \
	XMLDesignUnitList.hh \
	XMLDesignUnitList.cc \
	XMLDesignator.hh \
	XMLDesignator.cc \
	XMLDesignatorByAll.hh \
	XMLDesignatorByAll.cc \
	XMLDesignatorByOthers.hh \
	XMLDesignatorByOthers.cc \
	XMLDesignatorExplicit.hh \
	XMLDesignatorExplicit.cc \
	XMLDesignatorList.hh \
	XMLDesignatorList.cc \
	XMLDisconnectSpecification.hh \
	XMLDisconnectSpecification.cc \
	XMLDivisionOperator.hh \
	XMLDivisionOperator.cc \
	XMLDotAttribute.hh \
	XMLDotAttribute.cc \
	XMLDrivingAttribute.hh \
	XMLDrivingAttribute.cc \
	XMLDrivingValueAttribute.hh \
	XMLDrivingValueAttribute.cc \
	XMLDyadicOperator.hh \
	XMLDyadicOperator.cc \
	XMLElementDeclaration.hh \
	XMLElementDeclaration.cc \
	XMLElementDeclarationList.hh \
	XMLElementDeclarationList.cc \
	XMLLiteral.hh \
	XMLLiteral.cc \
	XMLEntityClassEntry.hh \
	XMLEntityClassEntry.cc \
	XMLEntityClassEntryList.hh \
	XMLEntityClassEntryList.cc \
	XMLEntityDeclaration.hh \
	XMLEntityDeclaration.cc \
	XMLEntityNameList.hh \
	XMLEntityNameList.cc \
	XMLEnumerationLiteral.hh \
	XMLEnumerationLiteral.cc \
	XMLEnumerationLiteralList.hh \
	XMLEnumerationLiteralList.cc \
	XMLEnumerationSubtypeDefinition.hh \
	XMLEnumerationSubtypeDefinition.cc \
	XMLEnumerationTypeDefinition.hh \
	XMLEnumerationTypeDefinition.cc \
	XMLEqualityOperator.hh \
	XMLEqualityOperator.cc \
	XMLEventAttribute.hh \
	XMLEventAttribute.cc \
	XMLExitStatement.hh \
	XMLExitStatement.cc \
	XMLExponentiationOperator.hh \
	XMLExponentiationOperator.cc \
	XMLExpression.hh \
	XMLExpression.cc \
	XMLFileDeclaration.hh \
	XMLFileDeclaration.cc \
	XMLLabel.hh \
	XMLLabel.cc \
	XMLFileInterfaceDeclaration.hh \
	XMLFileInterfaceDeclaration.cc \
	XMLFileTypeDefinition.hh \
	XMLFileTypeDefinition.cc \
	XMLFloatingPointLiteral.hh \
	XMLFloatingPointLiteral.cc \
	XMLFloatingPointLiteral32.hh \
	XMLFloatingPointLiteral32.cc \
	XMLFloatingPointLiteral64.hh \
	XMLFloatingPointLiteral64.cc \
	XMLFloatingSubtypeDefinition.hh \
	XMLFloatingSubtypeDefinition.cc \
	XMLFloatingTypeDefinition.hh \
	XMLFloatingTypeDefinition.cc \
	XMLForLoopStatement.hh \
	XMLForLoopStatement.cc \
	XMLFreeQuantityDeclaration.hh \
	XMLFreeQuantityDeclaration.cc \
	XMLFunctionCall.hh \
	XMLFunctionCall.cc \
	XMLFunctionDeclaration.hh \
	XMLFunctionDeclaration.cc \
	XMLGenericList.hh \
	XMLGenericList.cc \
	XMLGreaterThanOperator.hh \
	XMLGroupConstituent.hh \
	XMLGreaterThanOperator.cc \
	XMLGreaterThanOrEqualOperator.hh \
	XMLGreaterThanOrEqualOperator.cc \
	XMLGroupConstituent.cc \
	XMLGroupDeclaration.hh \
	XMLGroupDeclaration.cc \
	XMLGroupTemplateDeclaration.hh \
	XMLGroupTemplateDeclaration.cc \
	XMLHighAttribute.hh \
	XMLHighAttribute.cc \
	XMLIdentifier.hh \
	XMLIdentifier.cc \
	XMLIdentifierList.hh \
	XMLIdentifierList.cc \
	XMLIdentityOperator.hh \
	XMLIdentityOperator.cc \
	XMLIfStatement.hh \
	XMLIfStatement.cc \
	XMLImageAttribute.hh \
	XMLImageAttribute.cc \
	XMLIndexedName.hh \
	XMLIndexedName.cc \
	XMLInequalityOperator.hh \
	XMLInequalityOperator.cc \
	XMLInstanceNameAttribute.hh \
	XMLInstanceNameAttribute.cc \
	XMLIntegerLiteral.hh \
	XMLIntegerLiteral.cc \
	XMLIntegerLiteral32.hh \
	XMLIntegerLiteral32.cc \
	XMLIntegerLiteral64.hh \
	XMLIntegerLiteral64.cc \
	XMLIntegerSubtypeDefinition.hh \
	XMLIntegerSubtypeDefinition.cc \
	XMLIntegerTypeDefinition.hh \
	XMLIntegerTypeDefinition.cc \
	XMLTypeDefinition.hh \
	XMLTypeDefinition.cc \
	XMLInterfaceDeclaration.hh \
	XMLInterfaceDeclaration.cc \
	XMLInterfaceList.hh \
	XMLInterfaceList.cc \
	XMLLTFAttribute.hh \
	XMLLTFAttribute.cc \
	XMLLastActiveAttribute.hh \
	XMLLastActiveAttribute.cc \
	XMLLastEventAttribute.hh \
	XMLLastEventAttribute.cc \
	XMLLastValueAttribute.hh \
	XMLLastValueAttribute.cc \
	XMLLeftAttribute.hh \
	XMLLeftAttribute.cc \
	XMLLeftOfAttribute.hh \
	XMLLeftOfAttribute.cc \
	XMLLengthAttribute.hh \
	XMLLengthAttribute.cc \
	XMLLessThanOperator.hh \
	XMLLessThanOperator.cc \
	XMLLessThanOrEqualOperator.hh \
	XMLLessThanOrEqualOperator.cc \
	XMLLibraryClause.hh \
	XMLLibraryClause.cc \
	XMLLibraryDeclaration.hh \
	XMLLibraryDeclaration.cc \
	XMLLibraryUnit.hh \
	XMLLibraryUnit.cc \
	XMLLibraryUnitList.hh \
	XMLLibraryUnitList.cc \
	XMLName.hh \
	XMLName.cc \
	XMLList.hh \
	XMLList.cc \
	XMLSignature.hh \
	XMLSignature.cc \
	XMLLowAttribute.hh \
	XMLLowAttribute.cc \
	XMLModulusOperator.hh \
	XMLModulusOperator.cc \
	XMLObjectDeclaration.hh \
	XMLObjectDeclaration.cc \
	XMLMonadicOperator.hh \
	XMLMonadicOperator.cc \
	XMLMultiplicationOperator.hh \
	XMLMultiplicationOperator.cc \
	XMLNameList.hh \
	XMLNameList.cc \
	XMLNandOperator.hh \
	XMLNandOperator.cc \
	XMLNatureDeclaration.hh \
	XMLNatureDeclaration.cc \
	XMLNatureDefinition.hh \
	XMLNatureDefinition.cc \
	XMLNegationOperator.hh \
	XMLNegationOperator.cc \
	XMLNextStatement.hh \
	XMLNextStatement.cc \
	XMLNorOperator.hh \
	XMLNorOperator.cc \
	XMLNotOperator.hh \
	XMLNotOperator.cc \
	XMLNullStatement.hh \
	XMLNullStatement.cc \
	XMLOrOperator.hh \
	XMLOrOperator.cc \
	XMLOthersInitialization.hh \
	XMLOthersInitialization.cc \
	XMLPackageBodyDeclaration.hh \
	XMLPackageBodyDeclaration.cc \
	XMLPackageDeclaration.hh \
	XMLPackageDeclaration.cc \
	XMLPathNameAttribute.hh \
	XMLPathNameAttribute.cc \
	XMLPhysicalLiteral.hh \
	XMLPhysicalLiteral.cc \
	XMLPhysicalSubtypeDefinition.hh \
	XMLPhysicalSubtypeDefinition.cc \
	XMLPhysicalTypeDefinition.hh \
	XMLPhysicalTypeDefinition.cc \
	XMLPhysicalUnit.hh \
	XMLPhysicalUnit.cc \
	XMLPortList.hh \
	XMLPortList.cc \
	XMLPosAttribute.hh \
	XMLPosAttribute.cc \
	XMLPredAttribute.hh \
	XMLPredAttribute.cc \
	XMLProcedureCallStatement.hh \
	XMLProcedureCallStatement.cc \
	XMLProcedureDeclaration.hh \
	XMLProcedureDeclaration.cc \
	XMLProcessStatement.hh \
	XMLProcessStatement.cc \
	XMLQualifiedExpression.hh \
	XMLQualifiedExpression.cc \
	XMLSubprogramDeclaration.hh \
	XMLSubprogramDeclaration.cc \
	XMLQuantityDeclaration.hh \
	XMLQuantityDeclaration.cc \
	XMLQuietAttribute.hh \
	XMLQuietAttribute.cc \
	XMLROLOperator.hh \
	XMLROLOperator.cc \
	XMLROROperator.hh \
	XMLROROperator.cc \
	XMLRangeAttribute.hh \
	XMLRangeAttribute.cc \
	XMLRangeTypeDefinition.hh \
	XMLRangeTypeDefinition.cc \
	XMLRecordTypeDefinition.hh \
	XMLRecordTypeDefinition.cc \
	XMLReferenceAttribute.hh \
	XMLReferenceAttribute.cc \
	XMLRemainderOperator.hh \
	XMLRemainderOperator.cc \
	XMLReportStatement.hh \
	XMLReportStatement.cc \
	XMLReturnStatement.hh \
	XMLReturnStatement.cc \
	XMLReverseRangeAttribute.hh \
	XMLReverseRangeAttribute.cc \
	XMLRightAttribute.hh \
	XMLRightAttribute.cc \
	XMLRightOfAttribute.hh \
	XMLRightOfAttribute.cc \
	XMLSLAOperator.hh \
	XMLSLAOperator.cc \
	XMLSLLOperator.hh \
	XMLSLLOperator.cc \
	XMLSRAOperator.hh \
	XMLSRAOperator.cc \
	XMLSRLOperator.hh \
	XMLSRLOperator.cc \
	XMLScalarNatureDefinition.hh \
	XMLScalarNatureDefinition.cc \
	XMLScalarTypeDefinition.hh \
	XMLScalarTypeDefinition.cc \
	XMLSelectedName.hh \
	XMLSelectedName.cc \
	XMLSelectedNameByAll.hh \
	XMLSelectedNameByAll.cc \
	XMLSelectedWaveform.hh \
	XMLSelectedWaveform.cc \
	XMLSelectedWaveformList.hh \
	XMLSelectedWaveformList.cc \
	XMLSensitizedProcessStatement.hh \
	XMLSensitizedProcessStatement.cc \
	XMLSequentialStatement.hh \
	XMLSequentialStatement.cc \
	XMLSequentialStatementList.hh \
	XMLSequentialStatementList.cc \
	XMLSharedVariableDeclaration.hh \
	XMLSharedVariableDeclaration.cc \
	XMLSignalAssignmentStatement.hh \
	XMLSignalAssignmentStatement.cc \
	XMLSignalDeclaration.hh \
	XMLSignalDeclaration.cc \
	XMLTuple.hh \
	XMLTuple.cc \
	XMLSignalInterfaceDeclaration.hh \
	XMLSignalInterfaceDeclaration.cc \
	XMLSliceName.hh \
	XMLSliceName.cc \
	XMLSimpleName.hh \
	XMLSimpleName.cc \
	XMLSimpleNameAttribute.hh \
	XMLSimpleNameAttribute.cc \
	XMLSimpleSimultaneousStatement.hh \
	XMLSimpleSimultaneousStatement.cc \
	XMLSimultaneousElsif.hh \
	XMLSimultaneousElsif.cc \
	XMLSimultaneousIfStatement.hh \
	XMLSimultaneousIfStatement.cc \
	XMLSimultaneousStatement.hh \
	XMLSimultaneousStatement.cc \
	XMLSourceQuantityDeclaration.hh \
	XMLSourceQuantityDeclaration.cc \
	XMLStableAttribute.hh \
	XMLStableAttribute.cc \
	XMLStringLiteral.hh \
	XMLStringLiteral.cc \
	XMLSubtractionOperator.hh \
	XMLSubtractionOperator.cc \
	XMLSubtypeDeclaration.hh \
	XMLSubtypeDeclaration.cc \
	XMLSuccAttribute.hh \
	XMLSuccAttribute.cc \
	XMLTerminalDeclaration.hh \
	XMLTerminalDeclaration.cc \
	XMLIncompleteTypeDefinition.hh \
	XMLIncompleteTypeDefinition.cc \
	XMLTerminalInterfaceDeclaration.hh \
	XMLTerminalInterfaceDeclaration.cc \
	XMLTypeConversion.hh \
	XMLTypeConversion.cc \
	XMLTextLiteral.hh \
	XMLTextLiteral.cc \
	XMLThroughAttribute.hh \
	XMLThroughAttribute.cc \
	XMLTransactionAttribute.hh \
	XMLTransactionAttribute.cc \
	XMLTypeDeclaration.hh \
	XMLTypeDeclaration.cc \
	XMLZTFAttribute.hh \
	XMLZTFAttribute.cc \
	XMLUnitList.hh \
	XMLUnitList.cc \
	XMLUseClause.hh \
	XMLUseClause.cc \
	XMLValAttribute.hh \
	XMLValAttribute.cc \
	XMLValueAttribute.hh \
	XMLValueAttribute.cc \
	XMLVariableAssignmentStatement.hh \
	XMLVariableAssignmentStatement.cc \
	XMLVariableDeclaration.hh \
	XMLVariableDeclaration.cc \
	XMLVariableInterfaceDeclaration.hh \
	XMLVariableInterfaceDeclaration.cc \
	XMLWaitStatement.hh \
	XMLWaitStatement.cc \
	XMLWaveformElement.hh \
	XMLWaveformElement.cc \
	XMLWaveformList.hh \
	XMLWaveformList.cc \
	XMLWhileLoopStatement.hh \
	XMLWhileLoopStatement.cc \
	XMLXnorOperator.hh \
	XMLXnorOperator.cc \
	XMLXorOperator.hh \
	XMLXorOperator.cc \
	XMLStandardPackage.hh \
	xml_plugin_class_factory.hh \
	xml_plugin_class_factory.cc \
	xml_plugin_interface.hh \
	xml_plugin_interface.cc 
